--- a/slave/my.cnf
+++ b/slave/my.cnf
@@ -4,3 +4,8 @@ relay-log=mysql-relay-bin
 ## test for commit 1
 eheheheheh
 ## END test for commit 1
+
+
+## test for commit 22222222
+eheheheheh
+## END test for commit 22222222
